--- a/Biblioteka/Biblioteka/App.config
+++ b/Biblioteka/Biblioteka/App.config
@@ -3,8 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Biblioteka.Properties.Settings.BazaConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Baza.mdf;Integrated Security=True"
+        <add name="Biblioteka.Properties.Settings.conn" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\bazadanych.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
